Fix misaligned ul by adding CSS style
This commit addresses the issue of the misaligned unordered list (ul) element by adding a CSS style. The ul was not properly aligned, causing visual inconsistencies.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,7 +134,7 @@ html {
   }
 }
 @media (min-width: 768px) {
-  .md\:pt-6 {
-    padding-left: 2.1rem;
-  }
+ .daysulpadding {
+  padding-left: 2.1rem; 
+}
 }
